# MyMathLib

./: CMakeLists.txt  KarimeMathLib.h  KarimeMathLib2.h  MyMathLib.h  main  main.cpp  sonar-project.properties
.github/workflows/: build.yml
tests/: test.cpp  test1.cpp  test2.cpp
